--- a/client/src/features/members/member-profile/member-profile.html
+++ b/client/src/features/members/member-profile/member-profile.html
@@ -1,4 +1,4 @@
-@if (member();as member) {
+@if (memberService.member();as member) {
 <div class="flex flex-col gap-3">
     <div class="flex gap-3">
         <span class="font-semibold">Member since:</span>
@@ -9,6 +9,37 @@
         <span>{{member.lastActive | date:'dd MMM yyyy h:mm a'}}</span>
     </div>
     <h3 class="text-lg font-semibold text-primary"> About {{member.displayName}}</h3>
+    @if(memberService.editMode()){
+    <form #editForm="ngForm" (ngSubmit)="updateProfile()" class="flex flex-col w-full gap-4">
+        <label class="floating-label">
+            <span>Display Name</span>
+            <input type="text" class="input w-full" name="displayName" [(ngModel)]="editableMeber.displayName"
+                placeholder="Display Name">
+        </label>
+        <label class="floating-label">
+            <span>Description</span>
+            <textarea type="text" class="textarea w-full" name="description" [(ngModel)]="editableMeber.description"
+                placeholder="Description">
+                 </textarea>
+        </label>
+        <label class="floating-label">
+            <span>City</span>
+            <input type="text" class="input w-full" name="city" [(ngModel)]="editableMeber.city" placeholder="City">
+        </label>
+        <label class="floating-label">
+            <span>Country</span>
+            <input type="text" class="input w-full" name="country" [(ngModel)]="editableMeber.country"
+                placeholder="Country">
+        </label>
+        <div class="flex self-end">
+            <button 
+            [disabled]="!editForm.dirty"
+            type="submit" class="btn btn-success">Submit</button>
+        </div>
+    </form>
+    }@else {
     <div>{{member.description}}</div>
+    }
+
 </div>
 }
